# FFMpegDemo

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/custom/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVideo.cpp  FFmpegVideo.h  JavaCall.cpp  JavaCall.h  native-lib.cpp
app/src/main/java/com/custom/ffmpegdemo/: FFMpegUtil.java  MainActivity.java  MyApp.java
app/src/main/java/com/custom/ffmpegdemo/listener/: OnCompleteListener.java  OnInfoListener.java  OnStartListener.java
app/src/main/java/com/custom/ffmpegdemo/model/: TimeBean.java
app/src/main/java/com/custom/ffmpegdemo/utils/: MyLog.java  TimeUtils.java
app/src/main/java/com/custom/ffmpegdemo/widget/: VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/custom/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
